crates/dag-macros/tests/ui/workflow_timeout_invalid_key.stderr
error: timeout! requires `ms = <integer>`
  --> tests/ui/workflow_timeout_invalid_key.rs:41:31
   |
41 |     timeout!(trigger -> sink, secs = 1);
   |                               ^^^^
